--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -6,27 +6,46 @@
 $dark-bg: #1e2a38;
 $light-bg: #f5f5f5;
 
+/*
+	Current color themes are for testing only
+	Side note, ChatGPT isn't great at making color themes XD
+*/
+
+// Warm color theme
 $warm-primary: #ff6f61; //Coral
 $warm-secondary: #ffa000; // Golden Amber
 $warm-tertiary: #ff5722; // Burnt Orange
+$warm-success: #388e3c; // Success Green
+$warm-warning: #f57f17; // Warning Orange
+$warm-error: #f44336; // Warning Red
 
+// Cool color theme
 $cool-primary: #004d40; // Darker Teal
 $cool-secondary: #00bcd4; // Cyan
 $cool-tertiary: #3f51b5; // Indigo
+$cool-success: #388e3c; // Success Green
+$cool-warning: #f57f17; // Warning Orange
+$cool-error: #f44336; // Warning Red
 
+// Mixed color theme
 $mixed-primary: #e91e63; // Magenta
 $mixed-secondary: #9e9d24; // Darker Lime Green
 $mixed-tertiary: #673ab7; // Deep Purple
+$mixed-success: #388e3c; // Success Green
+$mixed-warning: #f57f17; // Warning Orange
+$mixed-error: #f44336; // Warning Red
 
-$primary: $mixed-primary !default;
-$secondary: $mixed-secondary !default;
-$tertiary: $mixed-tertiary !default;
-$success: DarkGreen !default;
-$warning: DarkOrange !default;
-$error: DarkRed !default;
+// Active color theme
+$primary: $cool-primary !default;
+$secondary: $cool-secondary !default;
+$tertiary: $cool-tertiary !default;
+$success: $cool-success !default;
+$warning: $cool-warning !default;
+$error: $cool-error !default;
 
+// Active text colors
 $text-white: #fafafa !default;
-$text-dark: #000000 !default;
+$text-black: #000000 !default;
 
 @mixin fontType($font: fonts.$font-noto) {
 	font-family: $font;
